Fix overlap spacing page Y index on iPhone 5s

--- a/src/components/CategoryList/CategoryList.scss
+++ b/src/components/CategoryList/CategoryList.scss
@@ -19,8 +19,10 @@
 
 .category-list__content {
     position: relative;
+    overflow-x: hidden;
     margin-bottom: 5px;
     padding: 3px 0;
+    text-overflow: ellipsis;
     white-space: nowrap;
 }
 
@@ -40,14 +42,14 @@
 
     .category-list__content-image {
         margin-right: 8px;
-        text-align: center;
         width: 35px;
+        text-align: center;
 
         img {
             display: inline-block;
             max-width: 100%;
-            height: 24px;
             width: auto;
+            height: 24px;
             vertical-align: middle;
         }
     }
